added global styles

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+body
+    font-family: "Inter Tight", sans-serif
+button
+    cursor : pointer
+    font-family: "Inter Tight", sans-serif
+
+p, h3, h4, h5, h1
+    margin: 0
+
+
+h2
+    font-size: 38px
+
+h3
+    font-size: 28px
+    color: #29294f
